# yt-videos-recommender

./: .env.example  .gitignore  README.md  RecommendationWorkflow.py  TopicBasedRecommender.py  YoutubeVideosRecommender.py  google_oauth_client.py  llm_api.py  llm_client.py  llm_client_config.py  llm_prompts.py  models.py  pyproject.toml  recommend-yt-videos.py  recommend.py  recommend_yt_videos.py  recommendation_workflow.py  topic_based_recommender.py  type_aliases.py  utils.py  youtube_api.py  youtube_client.py  youtube_videos_recommender.py
.github/: copilot-instructions.md
